--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,47 @@ nav ul{
     font-size: 18px;
     margin-bottom: 30px;
 }
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+
+.section-title{
+    font-weight: 700;
+    font-size: 35px;
+    margin-bottom: 30px;
+
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+    line-height: 30px;
+
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.about-title{
+    font-size: 20px;
+    color:#757575;
+}
+
+.about-description{
+    font-weight: 700;
+    color: #474747;
+}
