--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,10 @@ main{
     font-weight: 700;
     color: #474747;
 }
+
+
+.what-i-do{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+}
