--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ main{
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 30px;
+    text-align: center;
 
 }
 
@@ -121,6 +122,76 @@ main{
 
 .what-i-do{
     margin-top: 130px;
-    background-color: #FFF8F3;
     border-radius: 10px;
+    }
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill{
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+    border-radius: 5px;
+    padding: 30px;
+    
+
+}
+
+.skill-title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.skill-descripition{
+    line-height: 28px;
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.resume{
+    margin-top: 150px;
+    margin-bottom: 130px;
+}
+
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-content{
+    display: flex;
+    gap: 24px;
+    margin-top: 110px;
+}
+
+
+.resume .title{
+    font-size: 25px;
+    font-weight: 700;
+    color: #474747;
+
+}
+
+.resume .resume-subtitle{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+
+
+}
+
+.resume .resume-description{
+    line-height: 28px;
+    color: #757575;
+
+}
+
+.resume-btn{
+    margin-top: 50px;
+    text-align: center;
 }
